make sure the AddonTabs button text doesn't shift when clicking

--- a/app/styles/components/addon-tabs.css
+++ b/app/styles/components/addon-tabs.css
@@ -23,6 +23,7 @@
   justify-content: center;
   margin: 0;
   margin-left: -1px;
+  padding: 0 var(--spacing-1);
 }
 
 
